Fix issue LSR-2510, LSR-2512, LSR-2347