@@ -16,10 +16,12 @@
  *****************************************************************************/
 package cern.c2mon.web.ui.controller;
 
-import java.io.IOException;
-
-import javax.servlet.http.HttpServletResponse;
-
+import cern.c2mon.client.common.tag.CommandTag;
+import cern.c2mon.client.ext.history.command.CommandTagRecord;
+import cern.c2mon.web.ui.service.CommandService;
+import cern.c2mon.web.ui.service.CommandTagService;
+import cern.c2mon.web.ui.service.TagIdException;
+import cern.c2mon.web.ui.util.FormUtility;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -30,10 +32,10 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestMethod;
 import org.springframework.web.bind.annotation.RequestParam;
 
-import cern.c2mon.client.common.tag.CommandTag;
-import cern.c2mon.web.ui.service.CommandService;
-import cern.c2mon.web.ui.service.TagIdException;
-import cern.c2mon.web.ui.util.FormUtility;
+import javax.servlet.http.HttpServletRequest;
+import javax.servlet.http.HttpServletResponse;
+import java.io.IOException;
+import java.util.List;
 
 
 /**
@@ -42,25 +44,33 @@ import cern.c2mon.web.ui.util.FormUtility;
 @Controller
 public class CommandController {
 
+  private static final String COMMAND_VIEWER_PAGE_NAME = "commandviewer";
+
   /**
    * A REST-style URL to commandviewer, combined with command id displays command information
    */
-  public static final String COMMAND_URL = "/commandviewer/";
+  private static final String COMMAND_TAG_URL = "../";
+  //public static final String COMMAND_URL = "/commandviewer/";
 
   /**
    * URL to commandviewer, that displays command information in RAW XML
    */
-  public static final String COMMAND_XML_URL = "/commandviewer/xml";
+  public static final String COMMAND_XML_URL = "/" + COMMAND_VIEWER_PAGE_NAME + "/xml";
 
   /**
    * A URL to the commandviewer with input form
    */
-  public static final String COMMAND_FORM_URL = "/commandviewer/form";
+  public static final String COMMAND_FORM_URL = "/" + COMMAND_VIEWER_PAGE_NAME + "/form";
 
   /**
    * Title for the command form page
    */
   public static final String COMMAND_FORM_TITLE = "Command Configuration Viewer";
+
+  /**
+   * Placeholder for the command form page
+   */
+  public static final String COMMAND_FORM_PLACEHOLDER = "Command Tag";
 
   /**
    * Description for the command form page
@@ -73,6 +83,9 @@ public class CommandController {
   @Autowired
   private CommandService service;
 
+  @Autowired
+  private CommandTagService commandTagService;
+
   /**
    * CommandController logger
    */
@@ -81,10 +94,9 @@ public class CommandController {
   /**
    * @return Redirects to the form
    */
-  @RequestMapping(value = "/commandviewer/", method = { RequestMethod.GET })
+  @RequestMapping(value = "/" + COMMAND_VIEWER_PAGE_NAME + "/", method = { RequestMethod.GET })
   public String viewCommand(final Model model) {
-    logger.info("/commandviewer/");
-    return ("redirect:" + "/commandviewer/form");
+    return ("redirect:" + "/" + COMMAND_VIEWER_PAGE_NAME + "/form");
   }
 
   /**
@@ -94,13 +106,12 @@ public class CommandController {
    * @param id command id
    * @param model Spring MVC Model instance to be filled in before jsp processes it
    */
-  @RequestMapping(value = COMMAND_XML_URL + "/{id}", method = { RequestMethod.GET })
+  @RequestMapping(value = "/" + COMMAND_VIEWER_PAGE_NAME + "/xml" + "/id/{id}", method = { RequestMethod.GET })
   public String viewXml(@PathVariable final String id,  final Model model) {
-    logger.info(COMMAND_XML_URL + id);
     try {
       model.addAttribute("xml", service.getCommandTagXml(id));
     } catch (TagIdException e) {
-      return ("redirect:" + "/commandviewer/errorform/" + id);
+      return ("redirect:" + "/" + COMMAND_VIEWER_PAGE_NAME + "/errorform/id/" + id);
     }
     return "raw/xml";
   }
@@ -112,18 +123,47 @@ public class CommandController {
    * @param id command id
    * @param response we write the html result to that HttpServletResponse response
    */
-  @RequestMapping(value = "/commandviewer/{id}", method = { RequestMethod.GET })
+  @RequestMapping(value = "/" + COMMAND_VIEWER_PAGE_NAME + "/id/{id}", method = { RequestMethod.GET })
   public String viewCommand(@PathVariable(value = "id") final String id, final HttpServletResponse response, final Model model) throws IOException  {
-    logger.info("/commandviewer/{id} " + id);
 
-    CommandTag<?> tag = service.getCommandTag(new Long(id));
+    CommandTag<?> tag = service.getCommandTag(Long.valueOf(id));
     if (tag == null) {
-      return ("redirect:" + "/commandviewer/errorform/" + id);
+      return ("redirect:" + "/" + COMMAND_VIEWER_PAGE_NAME + "/errorform/id/" + id);
     }
 
     model.addAttribute("title", COMMAND_FORM_TITLE);
     model.addAttribute("tag", tag);
     return "commandtag";
+  }
+
+  @RequestMapping(value = "/" + COMMAND_VIEWER_PAGE_NAME + "/name/{name}", method = RequestMethod.GET)
+  public String viewCommandByName(@PathVariable(value = "name") final String name, final HttpServletResponse response, final Model model, final HttpServletRequest request) throws IOException {
+    List<CommandTagRecord> tags = commandTagService.getCommandTagByName(name);
+    if (tags.isEmpty()) {
+      return ("redirect:" + "/" + COMMAND_VIEWER_PAGE_NAME + "/errorform/name/" + name);
+    }
+
+    if(tags.size() == 1){
+      CommandTagRecord commandTag = tags.get(0);
+
+      CommandTag<?> tag = service.getCommandTag(commandTag.getId());
+      if (tag == null) {
+        //shouldn't happen but it's to prevent any errors
+        return ("redirect:" + "/" + COMMAND_VIEWER_PAGE_NAME + "/errorform/name/" + name);
+      }
+
+      model.addAttribute("title", COMMAND_FORM_TITLE);
+      model.addAttribute("tag", tag);
+
+      return "commandtag";
+    }
+
+    model.addAttribute("title", COMMAND_FORM_TITLE);
+    model.addAttribute("formPlaceHolder", COMMAND_FORM_PLACEHOLDER);
+    model.addAttribute("formUrl", COMMAND_VIEWER_PAGE_NAME);
+    model.addAttribute("entries", tags);
+
+    return "searchform/genericsearchlist";
   }
 
   /**
@@ -135,19 +175,48 @@ public class CommandController {
    * @param id tag id
    * @param model Spring MVC Model instance to be filled in before jsp processes it
    */
-  @RequestMapping(value = "/commandviewer/errorform/{id}")
+  @RequestMapping(value = "/" + COMMAND_VIEWER_PAGE_NAME + "/errorform/id/{id}", method = {RequestMethod.GET, RequestMethod.POST})
   public String viewCommandErrorForm(@PathVariable(value = "id") final String errorId,
-      @RequestParam(value = "id", required = false) final String id, final Model model) {
+                                     @RequestParam(value = "id", required = false) final String id,
+                                     @RequestParam(value = "name", required = false) final String name,
+                                     final Model model) {
 
-    logger.info("/commandviewer/errorform " + id);
+    String errorMessage = "Command Tag with id " + errorId + " could not be found !";
+    model.addAttribute("err", errorMessage);
 
-    if (id == null)
-      model.addAllAttributes(FormUtility.getFormModel(COMMAND_FORM_TITLE, COMMAND_FORM_INSTR, COMMAND_FORM_URL, id, COMMAND_URL + id));
-    else
-      return ("redirect:" + COMMAND_URL + id);
+    if (id != null && !id.isEmpty()) {
+      return ("redirect:/" + COMMAND_VIEWER_PAGE_NAME + "/id/" + id);
 
-    model.addAttribute("err", errorId);
-    return "genericErrorForm";
+    } else if (name != null && !name.isEmpty()) {
+      return ("redirect:/" + COMMAND_VIEWER_PAGE_NAME + "/name/" + name);
+
+    } else {
+      model.addAllAttributes(FormUtility.getFormModel(COMMAND_FORM_TITLE, COMMAND_FORM_URL, null, COMMAND_FORM_PLACEHOLDER, null));
+
+    }
+    return "form/genericErrorForm";
+  }
+
+  @RequestMapping(value = "/" + COMMAND_VIEWER_PAGE_NAME + "/errorform/name/{name}", method = {RequestMethod.GET, RequestMethod.POST})
+  public String viewCommandNameErrorForm(@PathVariable(value = "name") final String errorName,
+                                         @RequestParam(value = "id", required = false) final String id,
+                                         @RequestParam(value = "name", required = false) final String name,
+                                         final Model model) {
+
+    String errorMessage = "Command Tag with name " + errorName + " could not be found !";
+    model.addAttribute("err", errorMessage);
+
+    if (id != null && !id.isEmpty()) {
+      return ("redirect:/" + COMMAND_VIEWER_PAGE_NAME + "/id/" + id);
+
+    } else if (name != null && !name.isEmpty()) {
+      return ("redirect:/" + COMMAND_VIEWER_PAGE_NAME + "/name/" + name);
+
+    } else {
+      model.addAllAttributes(FormUtility.getFormModel(COMMAND_FORM_TITLE, COMMAND_FORM_URL, null, COMMAND_FORM_PLACEHOLDER, null));
+
+    }
+    return "form/genericErrorForm";
   }
 
   /**
@@ -157,12 +226,18 @@ public class CommandController {
    * @param id command id
    * @param model Spring MVC Model instance to be filled in before jsp processes it
    */
-  @RequestMapping(value = "/commandviewer/form/{id}", method = { RequestMethod.GET })
-  public String viewCommandWithForm(@PathVariable final String id, final Model model) {
-    logger.info("/commandviewer/form/{id} " + id);
+  @RequestMapping(value = "/commandviewer/form/id/{id}", method = { RequestMethod.GET })
+  public String viewCommandWithForm(@PathVariable(value = "id") final String id, final Model model) {
     model.addAllAttributes(FormUtility.getFormModel(COMMAND_FORM_TITLE, COMMAND_FORM_INSTR,
-        COMMAND_FORM_URL, id, COMMAND_URL + id));
-    return "genericForm";
+            COMMAND_FORM_URL, id, COMMAND_TAG_URL + id));
+    return "form/genericForm";
+  }
+
+  @RequestMapping(value = "/commandviewer/form/name/{name}", method = { RequestMethod.GET })
+  public String viewCommandNameWithForm(@PathVariable(value = "name") final String name, final Model model) {
+    model.addAllAttributes(FormUtility.getFormModel(COMMAND_FORM_TITLE, COMMAND_FORM_INSTR,
+            COMMAND_FORM_URL, name, COMMAND_TAG_URL + name));
+    return "form/genericForm";
   }
 
   /**
@@ -173,13 +248,19 @@ public class CommandController {
    * @param id command id
    * @param model Spring MVC Model instance to be filled in before jsp processes it
    */
-  @RequestMapping(value = "/commandviewer/form", method = { RequestMethod.GET, RequestMethod.POST })
-  public String viewCommandFormPost(@RequestParam(value = "id", required = false) final String id, final Model model) {
-    logger.info("/commandviewer/form " + id);
-    if (id == null)
-      model.addAllAttributes(FormUtility.getFormModel(COMMAND_FORM_TITLE, COMMAND_FORM_INSTR, COMMAND_FORM_URL, null, null));
-    else
-      return ("redirect:" + COMMAND_URL + id);
-    return "genericForm";
+  @RequestMapping(value = "/" + COMMAND_VIEWER_PAGE_NAME + "/form", method = {RequestMethod.GET, RequestMethod.POST})
+  public String viewTagFormPost(@RequestParam(value = "id", required = false) final String id,
+                                @RequestParam(value = "name", required = false) final String name,
+                                final Model model) {
+    if (id != null && !id.isEmpty()) {
+      return ("redirect:" + COMMAND_TAG_URL + COMMAND_VIEWER_PAGE_NAME + "/id/" + id);
+
+    } else if (name != null && !name.isEmpty()) {
+      return ("redirect:" + COMMAND_TAG_URL + COMMAND_VIEWER_PAGE_NAME + "/name/" + name);
+
+    } else {
+      model.addAllAttributes(FormUtility.getFormModel(COMMAND_FORM_TITLE, COMMAND_FORM_INSTR, COMMAND_FORM_URL, null, COMMAND_FORM_PLACEHOLDER, null));
+    }
+    return "form/genericForm";
   }
 }
